working tree without leaves

--- a/index.html
+++ b/index.html
@@ -9,11 +9,120 @@
 
 <body>
 
+<div class="row">
+    <div class="col-md-12" id ="svgArea"></div>
+</div>
+
 <script src="D3/d3.js"></script>
 <script src="bootstrap-3.1.1-dist/js/jquery-1.11.1.js"></script>
 <script src="bootstrap-3.1.1-dist/js/bootstrap.min.js"></script>
 
 <script>
+
+var branches = [];
+var da = degToRad(30); // Angle delta
+var dl = 0.8; // Length delta (factor)
+var ar = 0.7; // Randomness
+var aRand = degToRad(10);
+var seedWidth = 10;
+var maxDepth = 10;
+
+function degToRad(degree) {
+    return degree*Math.PI/180;
+}
+
+function normalizeAngle(rad) {
+    return degToRad(90)+rad;
+}
+
+// Tree creation functions
+function branch(b) {
+    var end = endPt(b), daR, newB;
+
+    branches.push(b);
+
+    if (b.depth === maxDepth)
+        return;
+
+    // Left branch
+    daR = ar * Math.random() - ar * 0.5;
+    daR = Math.random() * (aRand + aRand) - aRand; //random angle between -aRand and aRand
+    newB = {
+        i: branches.length,
+        x: end.x,
+        y: end.y,
+        angle: b.angle + da + daR,
+        length: b.length * dl,
+        depth: b.depth + 1,
+        parent: b.i
+    };
+    branch(newB);
+
+    // Right branch
+    daR = ar * Math.random() - ar * 0.5;
+    daR = Math.random() * (aRand + aRand) - aRand; //random angle between -aRand and aRand
+    newB = {
+        i: branches.length,
+        x: end.x, 
+        y: end.y, 
+        angle: b.angle - da + daR, 
+        length: b.length * dl, 
+        depth: b.depth + 1,
+        parent: b.i
+    };
+    branch(newB);
+}
+
+function endPt(b) {
+    // Return endpoint of branch
+    var x = b.x + b.length * Math.cos( normalizeAngle(b.angle) );
+    var y = b.y - b.length * Math.sin( normalizeAngle(b.angle) );
+    return {x: x, y: y};
+}
+
+// define svg for placeholder
+var width = 800; 
+var height = 800;
+var svg = d3.select("#svgArea").append("svg")
+            .attr("width", width)
+            .attr("height", height);
+
+// Tree configuration
+var seed = {i: 0, x: width/2, y: height-0, angle: 0, length: height/5, depth: 0}; // a = angle, l = length, d = depth
+
+svg.style("background-color", "aliceblue");
+
+function x1(d) {return d.x;}
+function y1(d) {return d.y;}
+function x2(d) {return endPt(d).x;}
+function y2(d) {return endPt(d).y;}
+
+function highlightParents(d) {
+    var colour = d3.event.type === 'mouseover' ? 'green' : 'black';
+    var depth = d.depth;
+    for(var i = 0; i <= depth; i++) {
+        d3.select('#id-'+parseInt(d.i)).style('stroke', colour);
+        d = branches[d.parent];
+    }   
+}
+
+branch(seed);
+
+d3.select('svg')
+    .selectAll('line')
+    .data(branches)
+    .enter()
+    .append('line')
+    .attr('x1', x1)
+    .attr('y1', y1)
+    .attr('x2', x2)
+    .attr('y2', y2)
+    //.attr('stroke-width', 5)
+    .attr('stroke', 'black')
+    .style('stroke-width', function(d) {return parseInt(seedWidth + 1 - d.depth) + 'px';})
+    .attr('id', function(d) {return 'id-'+d.i;})
+    .on('mouseover', highlightParents)
+    .on('mouseout', highlightParents);
 
 </script>
 </body>
