add leaves on last branch. Leaf modeled using ellipse. Too simple

--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
     <meta charset="utf-8">
     <link href="bootstrap-3.1.1-dist/css/bootstrap.css" rel="stylesheet">
 </head>
+<style type="text/css">
+#content {
+    
+}
+.row {
+}
+</style>
 
 <body>
 
 <div class="row">
-    <div class="col-md-12" id ="svgArea"></div>
+    <div class="col-md-4" id="content">
+        <h1>Make a change</h1>
+        <button class="btn btn-primary" id='donate' type="submit">Donate</button>
+        <button class="btn btn-success" id='animate' type="submit">Animate</button>
+        <button class="btn btn-danger" id='atonce' type="submit">At Once</button>
+    </div>
+    </div>
+    <div class="col-md-8" id ="svgArea"></div>
 </div>
 
 <script src="D3/d3.js"></script>
@@ -21,10 +35,11 @@
 
 var branches = [];
 var leaves = [];
-var da = degToRad(30); // Angle delta
-var dl = 0.8; // Length delta (factor)
+// var da = degToRad(30); // Angle delta
+// var dl = 0.8; // Length delta (factor)
+// var aRand = degToRad(10);
 var ar = 0.7; // Randomness
-var aRand = degToRad(10);
+
 var seedWidth = 10;
 var maxDepth = 10;
 
@@ -32,23 +47,58 @@ function degToRad(degree) {
     return degree*Math.PI/180;
 }
 
+function radToDeg(radian) {
+    return radian*180/Math.PI
+}
+
+// transform angle with y axis as a basis. so 0 degree means vertical
 function normalizeAngle(rad) {
     return degToRad(90)+rad;
 }
 
+// transform angle with x axis as basis like normal polar coordinate
+function denormalizeAngle(rad) {
+    return rad - degToRad(90);
+}
+
 // Tree creation functions
 function branch(b) {
-    var end = endPt(b), daR, newB;
+    var end = endPt(b), daR, newB, da, dl, aRand;
 
     branches.push(b);
 
+    // start from depth n+1 the length is 0.8*length
+    if (b.depth >= 0 && b.depth < 1) {
+        dl = 0.4;
+    } else {
+        dl = 0.8;
+    }
+
+    // start from depth n+1 the angle is 20
+    if (b.depth >= 3) {
+        da = degToRad(20);
+        aRand = degToRad(10);
+    } else if (b.depth >= 5) {
+        da = degToRad(10);
+        aRand = degToRad(5);
+    } else {
+        da = degToRad(30);
+        aRand = degToRad(10);
+    }
+
     if (b.depth === maxDepth) {
+        b.visible = false;
         leaves.push(b);
         return;
     }
 
+    // console.log(b.i);
+    // console.log(b.depth);
+    // console.log(b.dl);
+    // console.log('-----')
+
     // Left branch
-    daR = ar * Math.random() - ar * 0.5;
+    //daR = ar * Math.random() - ar * 0.5;
     daR = Math.random() * (aRand + aRand) - aRand; //random angle between -aRand and aRand
     newB = {
         i: branches.length,
@@ -57,12 +107,15 @@ function branch(b) {
         angle: b.angle + da + daR,
         length: b.length * dl,
         depth: b.depth + 1,
-        parent: b.i
+        parent: b.i,
+        dl: dl,
+        da: radToDeg(da),
+        aRand: aRand
     };
     branch(newB);
 
     // Right branch
-    daR = ar * Math.random() - ar * 0.5;
+    //daR = ar * Math.random() - ar * 0.5;
     daR = Math.random() * (aRand + aRand) - aRand; //random angle between -aRand and aRand
     newB = {
         i: branches.length,
@@ -71,7 +124,10 @@ function branch(b) {
         angle: b.angle - da + daR, 
         length: b.length * dl, 
         depth: b.depth + 1,
-        parent: b.i
+        parent: b.i,
+        dl: dl,
+        da: radToDeg(da),
+        aRand: aRand
     };
     branch(newB);
 }
@@ -91,7 +147,7 @@ var svg = d3.select("#svgArea").append("svg")
             .attr("height", height);
 
 // Tree configuration
-var seed = {i: 0, x: width/2, y: height-0, angle: 0, length: height/6, depth: 0}; // a = angle, l = length, d = depth
+var seed = {i: 0, x: width/2, y: height-0, angle: 0, length: height/3, depth: 0}; // a = angle, l = length, d = depth
 
 //svg.style("background-color", "aliceblue");
 
@@ -101,7 +157,17 @@ function x2(d) {return endPt(d).x;}
 function y2(d) {return endPt(d).y;}
 
 function highlightParents(d) {
-    var colour = d3.event.type === 'mouseover' ? 'green' : 'black';
+    var colour = d3.event.type === 'mouseover' ? 'green' : '#470000';
+    var depth = d.depth;
+    for(var i = 0; i <= depth; i++) {
+        d3.select('#id-'+parseInt(d.i)).style('stroke', colour);
+        d = branches[d.parent];
+    }   
+}
+
+function highlightParents2(d) {
+    console.log(d);
+    var colour = d3.event.type === 'mouseover' ? 'green' : '#470000';
     var depth = d.depth;
     for(var i = 0; i <= depth; i++) {
         d3.select('#id-'+parseInt(d.i)).style('stroke', colour);
@@ -120,20 +186,73 @@ svg.selectAll('line')
     .attr('x2', x2)
     .attr('y2', y2)
     //.attr('stroke-width', 5)
-    .attr('stroke', 'black')
+    .attr('stroke', '#470000')
     .style('stroke-width', function(d) {return parseInt(seedWidth + 1 - d.depth) + 'px';})
     .attr('id', function(d) {return 'id-'+d.i;})
-    .on('mouseover', highlightParents)
+    .on('mouseover', highlightParents2)
     .on('mouseout', highlightParents);
 
-svg.selectAll('circle')
+svg.selectAll('ellipse')
     .data(leaves)
     .enter()
-    .append('circle')
+    .append('ellipse')
     .attr('cx', x2)
     .attr('cy', y2)
-    .attr('r', 5)
-    .attr('fill', "blue");
+    .attr('rx', 10)
+    .attr('ry', 20)
+    .attr('id', function(d,i){return 'id-' + i})
+    .attr('visibility', function(d){
+         return d.visible ? 'visible' : 'hidden'
+    })
+    .attr('transform', function(d){
+        return 'rotate(' + radToDeg(denormalizeAngle(d.angle)) + ' ' + endPt(d).x + ' ' + endPt(d).y + ')';
+    })
+    //.attr('transform', function(d){return "rotate(" + radToDeg(denormalizeAngle(d.angle)) + ")"})
+    .attr('stroke', 'black')
+    .attr('fill', "green");
+
+d3.select('#donate').on('click', update);
+d3.select('#animate').on('click', animate);
+d3.select('#atonce').on('click', atonce);
+
+var numOfClick = 0;
+
+function update() {
+    console.log('btn clicked')
+    numOfClick++;
+    leaves[numOfClick].visible = true;
+    svg
+        .selectAll('ellipse')
+        .data(leaves)
+        .transition()
+        .attr('visibility', function(d){return d.visible ? 'visible' : 'hidden'});
+}
+
+function animate() {
+    for (i = 0; i < leaves.length; i++) {
+        setTimeout(function(i) {
+            leaves[i].visible = true;
+            svg
+                .selectAll('ellipse#id-'+i)
+                .data(leaves)
+                .transition()
+                .attr('visibility', function(d){return d.visible ? 'visible' : 'hidden'});
+        }, 100, i);
+        
+
+    }
+}
+
+function atonce() {
+    leaves.forEach(function(d){
+        d.visible = true;
+    })
+    svg
+        .selectAll('ellipse')
+        .data(leaves)
+        .transition()
+        .attr('visibility', function(d){return d.visible ? 'visible' : 'hidden'});
+}
 
 
 </script>
