--- a/index.html
+++ b/index.html
@@ -24,7 +24,90 @@
         <button class="btn btn-success" id='animate' type="submit">Animate</button>
         <button class="btn btn-danger" id='atonce' type="submit">At Once</button>
     </div>
-    <div class="col-md-8" id ="svgArea"></div>
+    <div class="col-md-8" id ="svgArea">
+        <svg
+           xmlns:dc="http://purl.org/dc/elements/1.1/"
+           xmlns:cc="http://creativecommons.org/ns#"
+           xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+           xmlns:svg="http://www.w3.org/2000/svg"
+           xmlns="http://www.w3.org/2000/svg"
+           xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+           xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+           width="186.32976"
+           height="170.42111"
+           id="svg1901"
+           sodipodi:version="0.32"
+           inkscape:version="0.46+pre4"
+           sodipodi:docname="leaf.svg"
+           sodipodi:docbase="C:\Important\svg"
+           inkscape:output_extension="org.inkscape.output.svg.inkscape"
+           version="1.0">
+          <defs>
+                <g
+                    inkscape:label="Taso 1"
+                    inkscape:groupmode="layer"
+                    id="layer1"
+                    transform="scale(0.1) rotate(132 355 210)">
+                    <path
+                        style="fill-rule:evenodd;stroke-width:3.00000024;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                        d="M 422.27292,632.34394 C 432.85918,616.61295 448.34076,612.0402 448.34076,612.0402 C 448.34076,612.0402 442.54386,606.55398 439.22989,607.84521 C 426.2285,617.56064 419.44945,629.60334 419.44945,629.60334 C 266.27427,623.18356 285.91787,686.20064 265.011,767.7044 C 381.6304,796.72098 433.42735,737.61667 422.27292,632.34394 z"
+                        id="path2159"
+                        sodipodi:nodetypes="cccccc" />
+                    <!-- <path
+                        style="fill:#abc837;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:10;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1"
+                        d="M 302.27759,741.21062 C 312.59094,737.71342 319.22122,728.61389 328.93943,724.10035 C 335.14269,714.75636 349.43533,712.00907 346.17152,729.80846 C 341.8614,737.76032 352.91408,760.81454 355.72913,743.55812 C 358.08954,731.20136 348.85485,717.1466 351.93186,705.46388 C 358.49071,696.04816 365.40665,685.64598 375.07218,679.76244 C 382.80036,689.48542 383.13328,707.52311 382.74251,719.46905 C 396.22556,732.1495 392.54206,703.058 389.47711,694.77056 C 382.451,679.12849 383.55459,664.84496 397.6377,660.1622 C 404.73986,658.06346 419.53919,640.77051 403.1361,642.87667 C 392.38688,648.00479 386.31989,661.9091 373.03691,661.89063 C 361.92009,659.56636 338.81043,639.82534 336.66956,655.76491 C 342.93053,664.24787 369.9026,660.24127 365.11729,674.35945 C 353.65845,678.84665 352.6711,701.25674 336.37406,695.49154 C 326.77131,692.78319 307.80361,677.82768 305.15926,691.25865 C 310.75635,700.18676 334.56641,695.04273 333.28119,708.74618 C 321.90598,718.12074 305.73983,723.82061 298.22278,736.6954 C 298.65539,738.6772 300.291,740.78 302.27759,741.21062 z"
+                       id="path3147" /> -->
+                </g>
+                <!-- <g
+                    inkscape:label="Taso 1"
+                    inkscape:groupmode="layer"
+                    id="layer1"
+                    style="opacity:1"
+                    transform="scale(0.1) rotate(132 355 210)">
+                    <path
+                        style="fill:#89a02c;fill-rule:evenodd;stroke:#4c5a17;stroke-width:3.00000024;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                        d="M 422.27292,632.34394 C 432.85918,616.61295 448.34076,612.0402 448.34076,612.0402 C 448.34076,612.0402 442.54386,606.55398 439.22989,607.84521 C 426.2285,617.56064 419.44945,629.60334 419.44945,629.60334 C 266.27427,623.18356 285.91787,686.20064 265.011,767.7044 C 381.6304,796.72098 433.42735,737.61667 422.27292,632.34394 z"
+                        id="path2159"
+                        sodipodi:nodetypes="cccccc" />
+                    <path
+                        style="fill:#abc837;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:10;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1"
+                        d="M 302.27759,741.21062 C 312.59094,737.71342 319.22122,728.61389 328.93943,724.10035 C 335.14269,714.75636 349.43533,712.00907 346.17152,729.80846 C 341.8614,737.76032 352.91408,760.81454 355.72913,743.55812 C 358.08954,731.20136 348.85485,717.1466 351.93186,705.46388 C 358.49071,696.04816 365.40665,685.64598 375.07218,679.76244 C 382.80036,689.48542 383.13328,707.52311 382.74251,719.46905 C 396.22556,732.1495 392.54206,703.058 389.47711,694.77056 C 382.451,679.12849 383.55459,664.84496 397.6377,660.1622 C 404.73986,658.06346 419.53919,640.77051 403.1361,642.87667 C 392.38688,648.00479 386.31989,661.9091 373.03691,661.89063 C 361.92009,659.56636 338.81043,639.82534 336.66956,655.76491 C 342.93053,664.24787 369.9026,660.24127 365.11729,674.35945 C 353.65845,678.84665 352.6711,701.25674 336.37406,695.49154 C 326.77131,692.78319 307.80361,677.82768 305.15926,691.25865 C 310.75635,700.18676 334.56641,695.04273 333.28119,708.74618 C 321.90598,718.12074 305.73983,723.82061 298.22278,736.6954 C 298.65539,738.6772 300.291,740.78 302.27759,741.21062 z"
+                       id="path3147" />
+                </g> -->
+          </defs>
+          <sodipodi:namedview
+             id="base"
+             pagecolor="#ffffff"
+             bordercolor="#666666"
+             borderopacity="1.0"
+             inkscape:pageopacity="0.0"
+             inkscape:pageshadow="2"
+             inkscape:zoom="0.7"
+             inkscape:cx="205.81395"
+             inkscape:cy="-68.376196"
+             inkscape:document-units="px"
+             inkscape:current-layer="layer1"
+             gridtolerance="10000"
+             inkscape:window-width="1280"
+             inkscape:window-height="938"
+             inkscape:window-x="-4"
+             inkscape:window-y="-4"
+             showguides="true"
+             inkscape:guide-bbox="true"
+             showgrid="false" />
+          <metadata
+             id="metadata1906">
+            <rdf:RDF>
+              <cc:Work
+                 rdf:about="">
+                <dc:format>image/svg+xml</dc:format>
+                <dc:type
+                   rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+              </cc:Work>
+            </rdf:RDF>
+          </metadata>
+        </svg>
+    </div>
 </div>
 
 <script src="D3/d3.js"></script>
@@ -35,13 +118,8 @@
 
 var branches = [];
 var leaves = [];
-// var da = degToRad(30); // Angle delta
-// var dl = 0.8; // Length delta (factor)
-// var aRand = degToRad(10);
-var ar = 0.7; // Randomness
-
-var seedWidth = 10;
-var maxDepth = 10;
+var seedWidth = 75;
+var maxDepth = 9;
 
 function degToRad(degree) {
     return degree*Math.PI/180;
@@ -71,7 +149,7 @@ function branch(b) {
     if (b.depth >= 0 && b.depth < 1) {
         dl = 0.5;
     } else {
-        dl = 0.8;
+        dl = 0.75;
     }
 
     //start from depth n+1 the angle is 20
@@ -86,8 +164,20 @@ function branch(b) {
     //     aRand = degToRad(5);
     // }
 
-    da = degToRad(25);
-    aRand = degToRad(5);
+    lRand = 0.15;
+    lRand = Math.random() * (lRand);
+
+    if (b.depth < 3) {
+            da = degToRad(30);
+            aRand = degToRad(10);
+        } else if (b.depth < 6) {
+            da = degToRad(20);
+            aRand = degToRad(10);
+        } else {
+            da = degToRad(20);
+            aRand = degToRad(5);
+        }
+
 
     if (b.depth === maxDepth) {
         b.visible = false;
@@ -114,7 +204,7 @@ function branch(b) {
         x: end.x,
         y: end.y,
         angle: b.angle + da + daR,
-        length: b.length * dl,
+        length: b.length * (dl + lRand),
         depth: b.depth + 1,
         parent: b.i,
         node: node,
@@ -132,7 +222,7 @@ function branch(b) {
         x: end.x, 
         y: end.y, 
         angle: b.angle - da + daR, 
-        length: b.length * dl, 
+        length: b.length * (dl + lRand), 
         depth: b.depth + 1,
         parent: b.i,
         node: node,
@@ -154,9 +244,10 @@ function endPt(b) {
 //var width = 800;
 var width = document.getElementById("svgArea").offsetWidth;
 var height = 800;
-var svg = d3.select("#svgArea").append("svg")
+var svg = d3.select("svg")
             .attr("width", width)
-            .attr("height", height);
+            .attr("height", height)
+            .attr('viewBox', '0 0 ' + width + ' ' + height);
 
 // Tree configuration
 var seed = {i: 0, x: width/2, y: height-0, angle: 0, length: height/4, depth: 0, node: []}; // a = angle, l = length, d = depth
@@ -188,10 +279,10 @@ function highlightParents2(d) {
 }
 
 function highlightLeaf(d,i) {
-    svg.selectAll('ellipse')
+    svg.selectAll('use')
         .style('fill', 'grey');
 
-    svg.select('ellipse#id-'+i)
+    svg.select('use#id-'+i)
         .style('fill', 'green');
 } 
 
@@ -207,33 +298,62 @@ svg.selectAll('line')
     .attr('y2', y2)
     //.attr('stroke-width', 5)
     .attr('stroke', '#470000')
-    .style('stroke-width', function(d) {return parseInt(seedWidth + 1 - d.depth) + 'px';})
+    .style('stroke-width', function(d) {if (d.depth == 0) { return parseInt(seedWidth) + 'px'}
+                                        else if (d.depth == 1) { return 55 + 'px'; }
+                                        else if (d.depth == 2) { return 37 + 'px'; }
+                                        else if (d.depth == 3) { return 21 + 'px'; }
+                                        else if (d.depth == 4) { return 13 + 'px'; }
+                                        else if (d.depth == 5) { return 9 + 'px'}
+                                        else if (d.depth == 6) { return 6 + 'px'; }
+                                        else if (d.depth == 7 ) { return 4 + 'px'; } 
+                                        else if (d.depth == 8 ) { return 3 + 'px'; } 
+                                        else if (d.depth == 9 ) { return 2 + 'px'; } 
+                                        else { return 1 + 'px'; }})
+    .style('stroke-linecap', 'round')
     .attr('id', function(d) {return 'id-'+d.i;})
     .on('mouseover', highlightParents2)
     .on('mouseout', highlightParents);
 
-svg.selectAll('ellipse')
+leafScale(1);
+
+svg.selectAll('use')
     .data(leaves)
     .enter()
-    .append('ellipse')
-    .attr('cx', x2)
-    .attr('cy', y2)
-    .attr('rx', 4)
-    .attr('ry', 10)
+    .append('use')
+    .attr('x', x2)
+    .attr('y', y2)
     .attr('id', function(d,i){return 'id-' + i})
+    .attr('transform', function(d){ return 'rotate(' + radToDeg(-d.angle) + ' ' + endPt(d).x + ' ' + endPt(d).y + ')';})
+    .attr("xlink:href", "#layer1")
+    .attr('style', 'fill:green;stroke:black')
     .attr('visibility', function(d){
          return d.visible ? 'visible' : 'hidden'
     })
-    .attr('transform', function(d){
-        // angle in making branch and rotate is different. 20 degree angle in branch eq to -20 degree angle in rotate
-        return 'rotate(' + radToDeg(-d.angle) + ' ' + endPt(d).x + ' ' + endPt(d).y + ')';
-        //return 'rotate(' + radToDeg(denormalizeAngle(d.angle)) + ' ' + endPt(d).x + ' ' + endPt(d).y + ')';
-    })
-    //.attr('transform', function(d){return "rotate(" + radToDeg(denormalizeAngle(d.angle)) + ")"})
-    .attr('stroke', 'black')
-    .attr('fill', "green")
     .on('mouseover', highlightLeaf)
-    .on('mouseout', function(d){svg.selectAll('ellipse').style('fill', 'green')});
+    .on('mouseout', function(d){svg.selectAll('use').style('fill', 'green')});
+
+// svg.selectAll('ellipse')
+//     .data(leaves)
+//     .enter()
+//     .append('ellipse')
+//     .attr('cx', x2)
+//     .attr('cy', y2)
+//     .attr('rx', 4)
+//     .attr('ry', 10)
+//     .attr('id', function(d,i){return 'id-' + i})
+//     .attr('visibility', function(d){
+//          return d.visible ? 'visible' : 'hidden'
+//     })
+//     .attr('transform', function(d){
+//         // angle in making branch and rotate is different. 20 degree angle in branch eq to -20 degree angle in rotate
+//         return 'rotate(' + radToDeg(-d.angle) + ' ' + endPt(d).x + ' ' + endPt(d).y + ')';
+//         //return 'rotate(' + radToDeg(denormalizeAngle(d.angle)) + ' ' + endPt(d).x + ' ' + endPt(d).y + ')';
+//     })
+//     //.attr('transform', function(d){return "rotate(" + radToDeg(denormalizeAngle(d.angle)) + ")"})
+//     .attr('stroke', 'black')
+//     .attr('fill', "green")
+//     .on('mouseover', highlightLeaf)
+//     .on('mouseout', function(d){svg.selectAll('ellipse').style('fill', 'green')});
 
 d3.select('#donate').on('click', update);
 d3.select('#animate').on('click', animate);
@@ -246,7 +366,7 @@ function update() {
     numOfClick++;
     leaves[numOfClick].visible = true;
     svg
-        .selectAll('ellipse')
+        .selectAll('use')
         .data(leaves)
         .transition()
         .attr('visibility', function(d){return d.visible ? 'visible' : 'hidden'});
@@ -257,7 +377,7 @@ function animate() {
         setTimeout(function(i) {
             leaves[i].visible = true;
             svg
-                .selectAll('ellipse#id-'+i)
+                .selectAll('use#id-'+i)
                 .data(leaves)
                 .transition()
                 .attr('visibility', function(d){return d.visible ? 'visible' : 'hidden'});
@@ -272,10 +392,15 @@ function atonce() {
         d.visible = true;
     })
     svg
-        .selectAll('ellipse')
+        .selectAll('use')
         .data(leaves)
         .transition()
         .attr('visibility', function(d){return d.visible ? 'visible' : 'hidden'});
+}
+
+function leafScale(scale) {
+    d3.select('g#layer1')
+        .attr('transform', 'scale(' + scale*0.1 + ') rotate(132 355 210)');
 }
 
 
