--- a/scale.html
+++ b/scale.html
@@ -246,8 +246,8 @@ function endPt(b) {
 // var width = 800 - margin.left - margin.right;
 // var height = 800 - margin.top - margin.bottom;
 //var width = document.getElementById("svgArea").offsetWidth;
-var width = 600;
-var height = 600;
+var width = 800;
+var height = 800;
 
 var svg = d3.select("svg")
             .attr("width", width)
@@ -343,7 +343,7 @@ svg.selectAll('line')
         //return parseInt(treeWidth(length)) + 'px';
     })
     //.style('stroke-width', function(d) {return parseInt(seedWidth + 1 - d.depth) + 'px';})
-    .style('stroke-linecap', 'round')
+    .style('stroke-linecap', function(d){return d.depth === -1 ? 'butt' : 'round'})
     .attr('id', function(d) {return 'id-'+d.i;})
     .on('mouseover', highlightParents2)
     .on('mouseout', highlightParents);
@@ -365,6 +365,22 @@ svg.selectAll('use')
     })
     .on('mouseover', highlightLeaf)
     .on('mouseout', function(d){svg.selectAll('use').style('fill', 'green')});
+
+// another hack to hide rounded line of first branch (the trunk)
+var trunk = branches[0];
+// svg.append('rect')
+//     .attr('width', xScale(treeWidth(trunk,0))
+//     .attr('height', yScale(trunk.length)*0.1)
+//     .attr('x', xScale(trunk.x-treeWidth(trunk,0)))
+//     .attr('y', yScale(trunk.y-trunk.length*0.1)))
+//     .attr('fill', 'white');
+
+// svg.append('rect')
+//     .attr('width', 75)
+//     .attr('height', 20)
+//     .attr('x', 400-75/2)
+//     .attr('y', 800-20)
+//     .attr('fill', 'white');
 
 // svg.selectAll('ellipse')
 //     .data(leaves)
@@ -438,7 +454,7 @@ function leafScale(scale) {
 }
 
 function treeWidth(length,depth) {
-    return depth === 0 ? (0.4059*length-8.1419)*0.6 : 0.4059*length-8.1419;
+    return depth === 0 ? (0.4059*length-8.1419)*0.73 : 0.4059*length-8.1419;
     //return 0.4059*length-8.1419;
 }
 
