--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
 #svgArea {
     display: block;
 }
+
+div.tooltip {   
+  position: absolute;           
+  text-align: center;                          
+  padding: 10px;  
+  color: #fff;           
+  font: 12px sans-serif;  
+  font-weight: bold;      
+  background: rgba(0, 0, 0, 0.9);;   
+  border: 2px;      
+  border-radius: 5px;           
+  pointer-events: none;         
+}
+
 </style>
 
 <body>
@@ -320,6 +334,10 @@ svg.selectAll('line')
 
 leafScale(1);
 
+var tooltip = d3.select("body").append("div")   
+    .attr("class", "tooltip")               
+    .style("opacity", 0);
+
 svg.selectAll('use')
     .data(leaves)
     .enter()
@@ -333,8 +351,20 @@ svg.selectAll('use')
     .attr('visibility', function(d){
          return d.visible ? 'visible' : 'hidden'
     })
-    .on('mouseover', highlightLeaf)
-    .on('mouseout', function(d){svg.selectAll('use').style('fill', 'green')});
+    //.on('mouseover', highlightLeaf)
+    //.on('mouseout', function(d){svg.selectAll('use').style('fill', 'green')});
+    .on("mouseover", function(d) {      
+        tooltip.transition().duration(200).style("opacity", 1);      
+        
+        tooltip.html("<strong>Depth: </strong>" + d.depth)  
+          .style("left", (d3.event.pageX) + "px")     
+          .style("top", (d3.event.pageY - 28) + "px");  
+    })
+    .on("mouseout", function(d) {       
+            tooltip.transition()        
+                .duration(500)      
+                .style("opacity", 0);   
+            });
 
 // svg.selectAll('ellipse')
 //     .data(leaves)
