scale version to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <style type="text/css">
 #content {
     padding-left: 50px;
+    padding-top: 100px;
 }
 #svgArea {
     display: block;
@@ -256,8 +257,8 @@ function endPt(b) {
 }
 
 // define svg for placeholder
-//var width = 800;
-var width = document.getElementById("svgArea").offsetWidth;
+//var width = document.getElementById("svgArea").offsetWidth;
+var width = 800;
 var height = 800;
 var svg = d3.select("svg")
             .attr("width", width)
@@ -265,14 +266,14 @@ var svg = d3.select("svg")
             .attr('viewBox', '0 0 ' + width + ' ' + height);
 
 // Tree configuration
-var seed = {i: 0, x: width/2, y: height-0, angle: 0, length: height/4, depth: 0, node: []}; // a = angle, l = length, d = depth
+var seed = {i: 0, x: 10, y: 20, angle: 0, length: 1, depth: 0, node: [], dl:0.5}; // a = angle, l = length, d = depth
 
 //svg.style("background-color", "aliceblue");
 
-function x1(d) {return d.x;}
-function y1(d) {return d.y;}
-function x2(d) {return endPt(d).x;}
-function y2(d) {return endPt(d).y;}
+function x1(d) {return xScale(d.x);}
+function y1(d) {return yScale(d.y);}
+function x2(d) {return xScale(endPt(d).x);}
+function y2(d) {return yScale(endPt(d).y);}
 
 function highlightParents(d) {
     var colour = d3.event.type === 'mouseover' ? 'green' : '#470000';
@@ -304,7 +305,21 @@ function highlightLeaf(d,i) {
 branch(seed);
 
 var xMax = Math.max.apply(null, branches.map(function(element){return element.x}));
+var xMin = Math.min.apply(null, branches.map(function(element){return element.x}));
 var yMax = Math.max.apply(null, branches.map(function(element){return element.y}));
+var yMin = Math.min.apply(null, branches.map(function(element){return element.y}));
+
+// an ugly hack to leave room for leave to grow inside the svg container
+// so that the leaf is not cut out of the svg
+var leafWidth = 0.8;
+
+var xScale = d3.scale.linear()
+        .domain([xMin-leafWidth, xMax+leafWidth])
+        .range([0, width]);
+
+var yScale = d3.scale.linear()
+        .domain([yMin-leafWidth, yMax+leafWidth])
+        .range([0, height]);
 
 svg.selectAll('line')
     .data(branches)
@@ -316,17 +331,27 @@ svg.selectAll('line')
     .attr('y2', y2)
     //.attr('stroke-width', 5)
     .attr('stroke', '#470000')
-    .style('stroke-width', function(d) {if (d.depth == 0) { return parseInt(seedWidth) + 'px'}
-                                        else if (d.depth == 1) { return 55 + 'px'; }
-                                        else if (d.depth == 2) { return 37 + 'px'; }
-                                        else if (d.depth == 3) { return 21 + 'px'; }
-                                        else if (d.depth == 4) { return 13 + 'px'; }
-                                        else if (d.depth == 5) { return 9 + 'px'}
-                                        else if (d.depth == 6) { return 6 + 'px'; }
-                                        else if (d.depth == 7 ) { return 4 + 'px'; } 
-                                        else if (d.depth == 8 ) { return 3 + 'px'; } 
-                                        else if (d.depth == 9 ) { return 2 + 'px'; } 
-                                        else { return 1 + 'px'; }})
+    // .style('stroke-width', function(d) {if (d.depth == 0) { return parseInt(seedWidth) + 'px'}
+    //                                     else if (d.depth == 1) { return 55 + 'px'; }
+    //                                     else if (d.depth == 2) { return 37 + 'px'; }
+    //                                     else if (d.depth == 3) { return 21 + 'px'; }
+    //                                     else if (d.depth == 4) { return 13 + 'px'; }
+    //                                     else if (d.depth == 5) { return 9 + 'px'}
+    //                                     else if (d.depth == 6) { return 6 + 'px'; }
+    //                                     else if (d.depth == 7 ) { return 4 + 'px'; } 
+    //                                     else if (d.depth == 8 ) { return 3 + 'px'; } 
+    //                                     else if (d.depth == 9 ) { return 2 + 'px'; } 
+    //                                     else { return 1 + 'px'; }})
+    .style('stroke-width', function(d){
+        var x2 = xScale(endPt(d).x);
+        var y2 = yScale(endPt(d).y);
+        var x1 = xScale(d.x);
+        var y1 = yScale(d.y);
+        var length = Math.pow(Math.pow((x2-x1),2)+Math.pow((y2-y1),2),0.5);
+        var width = treeWidth(length,d.depth);
+        return width < 1 ? parseInt(1) + 'px' : parseInt(width) + 'px';
+        //return parseInt(treeWidth(length)) + 'px';
+    })
     .style('stroke-linecap', 'round')
     .attr('id', function(d) {return 'id-'+d.i;})
     .on('mouseover', highlightParents2)
@@ -345,7 +370,7 @@ svg.selectAll('use')
     .attr('x', x2)
     .attr('y', y2)
     .attr('id', function(d,i){return 'id-' + i})
-    .attr('transform', function(d){ return 'rotate(' + radToDeg(-d.angle) + ' ' + endPt(d).x + ' ' + endPt(d).y + ')';})
+    .attr('transform', function(d){ return 'rotate(' + radToDeg(-d.angle) + ' ' + xScale(endPt(d).x) + ' ' + yScale(endPt(d).y) + ')';})
     .attr("xlink:href", "#layer1")
     .attr('style', 'fill:green;stroke:black')
     .attr('visibility', function(d){
@@ -365,6 +390,15 @@ svg.selectAll('use')
                 .duration(500)      
                 .style("opacity", 0);   
             });
+
+// another hack to hide rounded line of first branch (the trunk)
+var trunk = branches[0];
+svg.append('rect')
+    .attr('height', getLength(trunk)*0.3)
+    .attr('width', width)
+    .attr('x', 0)
+    .attr('y', yScale(trunk.y))
+    .attr('fill', 'white');
 
 // svg.selectAll('ellipse')
 //     .data(leaves)
@@ -437,8 +471,17 @@ function leafScale(scale) {
         .attr('transform', 'scale(' + scale*0.1 + ') rotate(132 355 210)');
 }
 
-function calculateTreeSpan(depth) {
+function treeWidth(length,depth) {
+    return depth === 0 ? (0.4059*length-8.1419)*0.73 : 0.4059*length-8.1419;
+    //return 0.4059*length-8.1419;
+}
 
+function getLength(branch) {
+    var x2 = xScale(endPt(branch).x);
+    var y2 = yScale(endPt(branch).y);
+    var x1 = xScale(branch.x);
+    var y1 = yScale(branch.y);
+    return Math.pow(Math.pow((x2-x1),2)+Math.pow((y2-y1),2),0.5);
 }
 
 
